# open-news

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  bot.py  chat_monitor.py  news_coverage.json  pyproject.toml  pytest.ini  scrapy.cfg
noticias_phb/: __main__.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
noticias_phb/classifier/: classifier.py
noticias_phb/classifier/test/: test_classifier.py
noticias_phb/classifier/test/fixtures/: almost_equal.txt  duplicated_news.txt  not_duplicated_news.txt  same_subject.txt
noticias_phb/pipelines/: __init__.py  deduplication.py  save.py  telegram.py
noticias_phb/spiders/: blog_do_silva.py  blogger.py  classic_blogger.py  costa_norte.py  modern_blogger.py  wordpress.py
open_news/: coverage.py  items.py  settings.py  utils.py
open_news/loaders/: __init__.py  pi_parnaiba.py
open_news/pipelines/: __init__.py  deduplication.py  hash.py  items_to_ignore.py  save.py  telegram.py
open_news/spiders/: blog_do_silva.py  classic_blogger.py  costa_norte.py  modern_blogger.py  pi_parnaiba.py
open_news/spiders/_base/: blogger.py  classic_blogger.py  dual_page.py  modern_blogger.py  simple_page.py
open_news/spiders/base/: __init__.py  blogger.py  dual_page.py  simple_page.py
scrapper/: settings.py
scrapper/spiders/: blogger.py
site/: index.html
site/css/: styles.css
