[tool.poetry]
name = "noticias-phb"
version = "0.1.0"
description = ""
authors = ["João Paulo Carvalho <jjpaulo2@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
uvloop = "^0.19.0"
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"
pysondb-v2 = "^2.2.0"
thefuzz = "^0.22.1"
taskipy = "^1.13.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.7"

[tool.taskipy.tasks]
lint = { cmd = "ruff format && ruff check --fix", help = "Format and lint the code" }
check = { cmd = "ruff format --check && ruff check && mypy .", help = "Check code issues" }
scrape = { cmd = "python -m noticias_phb", help = "Run news crawler" }

[tool.mypy]
follow_imports = "skip"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
