[tool.poetry]
name = "noticias-phb"
version = "0.1.0"
description = ""
authors = ["João Paulo Carvalho <jjpaulo2@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
pysondb-v2 = "^2.2.0"
taskipy = "^1.13.0"
emoji = "^2.12.1"
yt-dlp = {extras = ["default"], version = "^2024.8.6"}
pyrogram = "^2.0.106"
tgcrypto = "^1.2.5"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.7"
ipython = "^8.26.0"
scikit-learn = "^1.5.1"

[tool.taskipy.variables]
logfile = "noticias_phb.log"

[tool.taskipy.tasks]
lint = "ruff format && ruff check --fix"
check = "ruff format --check && ruff check && mypy ."
scrape_classic_blogger = "scrapy crawl classic_blogger"
scrape_modern_blogger = "scrapy crawl modern_blogger"
scrape_wordpress = "scrapy crawl wordpress"
scrape = "task scrape_classic_blogger && task scrape_modern_blogger && task scrape_wordpress"

[tool.mypy]
follow_imports = "skip"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
