[tool.poetry]
name = "open-news-brasil"
version = "0.1.0"
description = "Scrappers de notícias do Brasil"
authors = ["João Paulo Carvalho <jjpaulo2@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
scrapy = "^2.11.2"
pysondb-v2 = "^2.2.0"
taskipy = "^1.13.0"
boto3 = "^1.35.32"

[tool.poetry.group.dev.dependencies]
mypy = "^1.11.1"
ruff = "^0.5.7"
ipython = "^8.26.0"
scikit-learn = "^1.5.1"

[tool.taskipy.tasks]
lint = "ruff format && ruff check --fix"
check = "ruff format --check && ruff check && mypy ."
scrape = "for scrapper in $(scrapy list); do scrapy crawl \"$scrapper\"; done"
coverage = "python -m open_news.coverage"

[tool.mypy]
follow_imports = "skip"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
